--- a/FLASK/templates/index.html
+++ b/FLASK/templates/index.html
@@ -1,14 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>MAIN</title>
-</head>
-<body>
-<h1>Hello world!</h1>
-<p>Any text</p>
-<p><b>One more text</b></p>
+{% extends 'base.html' %}
+
+{% block content %}
+<p>MAIN PAGE CONTENT</p>
+{{ super() }}
+{% endblock %}
+
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--&lt;!&ndash;    <title>{{ title }}</title>&ndash;&gt;-->
+<!--    {% if title %}-->
+<!--    <title>This is {{title}}</title>-->
+<!--    {% else %}-->
+<!--    <title>About Flask</title>-->
+<!--    {% endif %}-->
+<!--</head>-->
+<!--<body>-->
+<!--<h1>Hello world!</h1>-->
+<!--<h2>{{ title }}</h2>-->
+<!--<ul>-->
+<!--    {% for r in menu %}-->
+<!--    <li><b>{{ r }}</b></li>-->
+<!--    {% endfor %}-->
+<!--</ul>-->
+
+<!--<p>Any text</p>-->
+<!--<p><b>One more text</b></p>-->
 
 
-</body>
-</html>
+<!--</body>-->
+<!--</html>-->
