--- a/FLASK/templates/base.html
+++ b/FLASK/templates/base.html
@@ -2,28 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/tf_6.css') }}">
     {% block title -%}
-    {% if title %}
-        <title>About Flask - {{title}} </title>
-    {% else %}
-        <title>About Flask</title>
-    {% endif %}
+        {% if title %}
+            <title>About Flask - {{ title }} </title>
+        {% else %}
+            <title>About Flask</title>
+        {% endif %}
     {% endblock %}
 </head>
 <body>
 {% block content -%}
-{%- block mainmenu %}
-<ul>
-    {% for m in menu -%}
-    <li>{{m}}</li>
-    {% endfor %}
-</ul>
-{% endblock mainmenu -%}
-{% if title -%}
-<h1>{{title}}</h1>
-{% else -%}
-<h1>About Flask</h1>
-{% endif -%}
+    {%- block mainmenu %}
+        <ul class="mainmenu">
+            {% for m in menu -%}
+                <li><a href="{{ m.url }}">{{ m.name }}</a> </li>
+            {% endfor %}
+        </ul>
+    {% endblock mainmenu -%}
+    <div class="clear"></div>
+    <div class="content">
+    {% if title -%}
+        <h1>{{ title }}</h1>
+    {% else -%}
+        <h1>About Flask</h1>
+    {% endif -%}
 {% endblock -%}
+</div>
 </body>
 </html>
