--- a/DJANGO/mysite/women/templates/women/base.html
+++ b/DJANGO/mysite/women/templates/women/base.html
@@ -1,8 +1,11 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>base</title>
+    <link type="text/css" href="{% static 'css/styles.css' %}" rel="stylesheet" />
 </head>
 <body>
 {% block mainmenu %}
@@ -12,7 +15,6 @@
         {% endfor %}
     </ul>
 {% endblock %}
-
 {% block content %}{% endblock %}
 
 </body>
