--- a/DJANGO/mysite/women/templates/women/about.html
+++ b/DJANGO/mysite/women/templates/women/about.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ title }}</title>
-</head>
-<body>
-<h1>WOMEN About Us</h1>
-</body>
-</html>
+{% extends 'women/base.html' %}
+
+{% block content %}
+    <p>{{ title }}</p>
+
+    <h1>About Us</h1>
+
+{% endblock %}
