--- a/DJANGO/mysite/women/templates/women/base.html
+++ b/DJANGO/mysite/women/templates/women/base.html
@@ -5,16 +5,17 @@
 <head>
     <meta charset="UTF-8">
     <title>base</title>
-    <link type="text/css" href="{% static 'css/styles.css' %}" rel="stylesheet" />
+    <link type="text/css" href="{% static 'css/styles.css' %}" rel="stylesheet"/>
 </head>
 <body>
 {% block mainmenu %}
     <ul>
         {% for m in menu %}
-            <li>{{ m }}</li>
+            <li><a href="{% url m.url_name %}"> {{ m.title }} </a></li>
         {% endfor %}
     </ul>
 {% endblock %}
+
 {% block content %}{% endblock %}
 
 </body>
