--- a/DJANGO/mysite/women/templates/women/about.html
+++ b/DJANGO/mysite/women/templates/women/about.html
@@ -1,8 +1,6 @@
 {% extends 'women/base.html' %}
 
 {% block content %}
-    <p>{{ title }}</p>
-
-    <h1>About Us</h1>
-
+<h1>{{title}}</h1>
+<p>Содержимое страницы о сайте
 {% endblock %}
